# nxdk

./: CMakeLists.txt
cmake/: API.md  README.md  buildtool.cmake  output.cmake  runandcapture.cmake  toolchain.cmake
lib/: CMakeLists.txt
lib/hal/: CMakeLists.txt
lib/libjpeg/: CMakeLists.txt
lib/libpng/: CMakeLists.txt
lib/net/: CMakeLists.txt
lib/nxdk/: CMakeLists.txt
lib/pbkit/: CMakeLists.txt
lib/sdl/: CMakeLists.txt
lib/usb/: CMakeLists.txt
lib/winapi/: CMakeLists.txt  memory.c  memoryapi.h
lib/xboxkrnl/: CMakeLists.txt
lib/xboxrt/: CMakeLists.txt
lib/zlib/: CMakeLists.txt
samples/: CMakeLists.txt
samples/cmake_demo/: CMakeLists.txt  main.c
samples/gamma/: CMakeLists.txt
samples/gamma-fade/: CMakeLists.txt
samples/hello/: CMakeLists.txt
samples/hello++/: CMakeLists.txt
samples/httpd/: CMakeLists.txt
samples/httpd_bsd/: CMakeLists.txt
samples/led/: CMakeLists.txt
samples/mesh/: CMakeLists.txt
samples/sdl/: CMakeLists.txt
samples/sdl_gamecontroller/: CMakeLists.txt
samples/sdl_image/: CMakeLists.txt
samples/sdl_ttf/: CMakeLists.txt
samples/triangle/: CMakeLists.txt
samples/usb/: CMakeLists.txt
samples/winapi_drivelist/: CMakeLists.txt
samples/winapi_filefind/: CMakeLists.txt
samples/xaudio/: CMakeLists.txt
tools/cxbe/: .gitignore  CMakeLists.txt
tools/fp20compiler/: .gitignore  CMakeLists.txt
tools/vp20compiler/: .gitignore  CMakeLists.txt
